--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     env_file:
       - .development.env
     environment:
-      - PG_DATA: /var/lib/postgresql/data
+      PG_DATA: /var/lib/postgresql/data
     ports:
       - 5432:5432
     volumes:
